Refactor version management and authentication services
- Moving whole launcher from version-dependent to instances-dependent
- Update instances Meta
- Removed the VersionService class, consolidating version management logic
- Enhanced HytaleAuthService to support profile-specific session storage and migration from legacy session files
- Updated ProfileManagementService to streamline UUID management, removing unnecessary UserUuids mapping
- Improved UserIdentityService to utilize profile data for UUID management, eliminating legacy mappings
- Adjusted SkinService to work with profile-based UUIDs and user data paths
- Ensured backward compatibility for version type normalization during migration

--- a/Frontend/src/assets/locales/be-BY.json
+++ b/Frontend/src/assets/locales/be-BY.json
@@ -73,6 +73,9 @@
     "preRelease": "Прэ-рэліз",
     "latest": "апошняя",
     "noVersions": "Няма версій",
+    "mirror": "Люстэрка",
+    "sourceOfficial": "Спампоўваецца з афіцыйных сервераў Hytale",
+    "sourceMirror": "Спампоўваецца з люстэрка супольнасці",
     "editProfile": "Рэдагаваць профіль",
     "updateAvailable": "Даступна абнаўленне",
     "joinDiscord": "Далучыцца да Discord",
@@ -445,7 +448,8 @@
       "download_complete": "Загрузка завершана!",
       "checking_versions": "Праверка даступных версій...",
       "installing_butler": "Наладка механізму загрузкі...",
-      "downloading_mirror": "Загрузка з люстэрка... {0}%"
+      "downloading_mirror": "Загрузка з люстэрка... {0}%",
+      "downloading_official": "Загрузка з Hytale... {0}%"
     }
   },
   "profileEditor": {
