--- a/Frontend/src/assets/locales/ru-RU.json
+++ b/Frontend/src/assets/locales/ru-RU.json
@@ -59,7 +59,31 @@
     "mods": "Моды",
     "profiles": "Профили",
     "instances": "Игры",
+    "logs": "Логи",
     "settings": "Настройки"
+  },
+  "logs": {
+    "title": "Логи",
+    "refresh": "Обновить",
+    "copy": "Копировать всё",
+    "copySelected": "Копировать выделенное",
+    "export": "Экспорт",
+    "clear": "Очистить",
+    "searchPlaceholder": "Поиск в логах...",
+    "loading": "Загрузка логов...",
+    "empty": "Пока нет логов",
+    "noResults": "Нет логов по заданным фильтрам",
+    "showing": "Показано {{count}} из {{total}} записей",
+    "selected": "{{count}} выбрано",
+    "auto": "Авто",
+    "filter": {
+      "all": "Все",
+      "info": "Инфо",
+      "success": "Успех",
+      "warning": "Предупр.",
+      "error": "Ошибка",
+      "debug": "Отладка"
+    }
   },
   "main": {
     "play": "ИГРАТЬ",
@@ -518,15 +542,6 @@
     "ok": "ОК",
     "dismiss": "Закрыть"
   },
-  "logs": {
-    "title": "Логи игры",
-    "description": "Просмотр вывода и ошибок игры",
-    "failedToLoad": "Не удалось загрузить логи: ",
-    "loading": "Загрузка логов...",
-    "noLogs": "Логов пока нет. Запустите игру для их создания.",
-    "autoRefresh": "Автообновление каждые 3 секунды",
-    "download": "Скачать"
-  },
   "update": {
     "downloading": "Загрузка...",
     "extracting": "Распаковка...",
@@ -683,6 +698,7 @@
   "onboarding": {
     "language": "Язык",
     "profile": "Профиль",
+    "hardware": "Оборудование",
     "visual": "Визуал",
     "location": "Расположение",
     "about": "О проекте",
@@ -690,6 +706,7 @@
     "getStarted": "Начать",
     "skip": "Пропустить",
     "welcome": "Добро пожаловать в HyPrism",
+    "welcomeBack": "С возвращением, {{name}}!",
     "letsSetUp": "Давайте настроим ваш лаунчер",
     "chooseLanguage": "Выберите язык",
     "selectLanguageHint": "Выберите предпочтительный язык интерфейса лаунчера",
@@ -699,6 +716,15 @@
     "enterUsername": "Введите никнейм",
     "generateUsername": "Случайный никнейм",
     "usernameHint": "1-16 символов",
+    "hardwareSettings": "Настройки оборудования",
+    "gpuPreference": "Выбор видеокарты",
+    "gpuHint": "Выберите, какую видеокарту использовать при запуске игры",
+    "gpu_auto": "Автоматически",
+    "gpu_autoHint": "Пусть система выберет",
+    "gpu_dedicated": "Дискретная видеокарта",
+    "gpu_dedicatedHint": "Использовать дискретную видеокарту",
+    "gpu_integrated": "Интегрированная видеокарта",
+    "gpu_integratedHint": "Использовать интегрированную графику",
     "customizeAppearance": "Настройте внешний вид",
     "chooseAccentAndBg": "Выберите цвет акцента и фон",
     "accentColor": "Цвет акцента",
@@ -717,7 +743,18 @@
     "maintainerRole": "Разработчик и Сопровождающий",
     "authServerCreator": "Создатель сервера авторизации",
     "disclaimer": "HyPrism — неофициальный лаунчер Hytale. Проект не имеет отношения к Hypixel Studios.",
-    "enterLauncher": "Войти в лаунчер"
+    "enterLauncher": "Войти в лаунчер",
+    "auth": {
+      "title": "Авторизация",
+      "description": "Войдите в свой аккаунт Hytale. Если вы ещё не купили игру, нажмите Пропустить.",
+      "login": "Войти через Hytale",
+      "skip": "Пропустить",
+      "authenticating": "Авторизация...",
+      "failed": "Ошибка авторизации. Попробуйте ещё раз.",
+      "error": "Произошла ошибка при авторизации.",
+      "noHytaleProfile": "У вашего аккаунта ещё нет доступа к Hytale. Вы можете приобрести игру на официальном сайте.",
+      "createFailed": "Не удалось создать профиль из аккаунта Hytale."
+    }
   },
   "languageSelector": {
     "changeLanguage": "Сменить язык",
