Fix for all shit connected to instances. Rollback IDs system

--- a/Frontend/src/assets/locales/be-BY.json
+++ b/Frontend/src/assets/locales/be-BY.json
@@ -360,10 +360,10 @@
       "unknown": "Невядома"
     },
     "tab": {
-      "content": "Mods",
+      "content": "Усталяваныя моды",
       "worlds": "Светы",
       "logs": "Логі",
-      "browse": "Browse Mods"
+      "browse": "Агляд модаў"
     },
     "saves": "Захаванні",
     "noSaves": "Захаванняў не знойдзена",
