--- a/Frontend/src/assets/locales/en-US.json
+++ b/Frontend/src/assets/locales/en-US.json
@@ -360,7 +360,7 @@
       "unknown": "Unknown"
     },
     "tab": {
-      "content": "Mods",
+      "content": "Installed Mods",
       "worlds": "Worlds",
       "logs": "Logs",
       "browse": "Browse Mods"
