--- a/Frontend/src/assets/locales/fr-FR.json
+++ b/Frontend/src/assets/locales/fr-FR.json
@@ -360,10 +360,10 @@
       "unknown": "Inconnue"
     },
     "tab": {
-      "content": "Mods",
+      "content": "Mods installés",
       "worlds": "Mondes",
       "logs": "Journaux",
-      "browse": "Browse Mods"
+      "browse": "Parcourir les mods"
     },
     "saves": "Sauvegardes",
     "noSaves": "Aucune sauvegarde trouvée",
