--- a/Frontend/src/assets/locales/ja-JP.json
+++ b/Frontend/src/assets/locales/ja-JP.json
@@ -360,10 +360,10 @@
       "unknown": "不明"
     },
     "tab": {
-      "content": "Mods",
+      "content": "インストール済みMOD",
       "worlds": "ワールド",
       "logs": "ログ",
-      "browse": "Browse Mods"
+      "browse": "MODを探す"
     },
     "saves": "セーブデータ",
     "noSaves": "セーブデータが見つかりません",
