--- a/Frontend/src/assets/locales/ru-RU.json
+++ b/Frontend/src/assets/locales/ru-RU.json
@@ -360,10 +360,10 @@
       "unknown": "Неизвестно"
     },
     "tab": {
-      "content": "Mods",
+      "content": "Установленные моды",
       "worlds": "Миры",
       "logs": "Логи",
-      "browse": "Browse Mods"
+      "browse": "Обзор модов"
     },
     "saves": "Сохранения",
     "noSaves": "Сохранений не найдено",
