--- a/Frontend/src/assets/locales/ru-RU.json
+++ b/Frontend/src/assets/locales/ru-RU.json
@@ -36,7 +36,8 @@
     "Latest": "Последняя",
     "refresh": "Обновить",
     "unknown": "Неизвестно",
-    "clear": "Очистить"
+    "clear": "Очистить",
+    "selectVersion": "Выберите версию"
   },
   "app": {
     "title": "HyPrism",
@@ -855,6 +856,14 @@
       "error": "Произошла ошибка при авторизации.",
       "noHytaleProfile": "У вашего аккаунта ещё нет доступа к Hytale. Вы можете приобрести игру на официальном сайте.",
       "createFailed": "Не удалось создать профиль из аккаунта Hytale."
+    },
+    "warning": {
+      "title": "Нет источников загрузки",
+      "description": "Без аккаунта Hytale вы не сможете загружать файлы игры с официальных серверов.",
+      "noSources": "Веб-ресурсы для загрузки недоступны",
+      "noSourcesHint": "Чтобы загрузить игру, вам нужно будет добавить зеркало в Настройках → Загрузки, или позже войти в аккаунт Hytale.",
+      "continue": "Продолжить",
+      "back": "Вернуться к авторизации"
     }
   },
   "languageSelector": {
