Add .pwr as supported to user-importing

--- a/Frontend/src/assets/locales/be-BY.json
+++ b/Frontend/src/assets/locales/be-BY.json
@@ -313,7 +313,7 @@
       "launchBranch": "Галіна запуску",
       "userData": "Карыстальніцкія дадзеныя",
       "empty": "Падаецца, вы яшчэ нічога не спампавалі.",
-      "dropZipImport": "Перацягніце ZIP для імпарту экзэмпляра",
+      "dropZipImport": "Перацягніце ZIP або PWR для імпарту экзэмпляра",
       "noInstances": "Экзэмпляры не ўсталяваны",
       "installHytale": "Усталюйце Hytale для стварэння экзэмпляра",
       "notPlayed": "Не гулялі",
