--- a/Frontend/src/assets/locales/ru-RU.json
+++ b/Frontend/src/assets/locales/ru-RU.json
@@ -323,7 +323,7 @@
       "launchBranch": "Ветка запуска",
       "userData": "Пользовательские данные",
       "empty": "Похоже, вы ещё ничего не скачали",
-      "dropZipImport": "Перетащите ZIP для импорта экземпляра",
+      "dropZipImport": "Перетащите ZIP или PWR для импорта",
       "noInstances": "Нет установленных экземпляров",
       "installHytale": "Установите Hytale для создания экземпляра",
       "notPlayed": "Не играли",
