--- a/Frontend/src/assets/locales/uk-UA.json
+++ b/Frontend/src/assets/locales/uk-UA.json
@@ -301,7 +301,7 @@
       "launchBranch": "Гілка запуску",
       "userData": "Дані користувача",
       "empty": "Що, ви ще нічого не завантажили.",
-      "dropZipImport": "Перетягнути ZIP-архів для імпорту екземпляра",
+      "dropZipImport": "Перетягнути ZIP або PWR для імпорту екземпляра",
       "noInstances": "Екземпляри не встановлено",
       "installHytale": "Встановити Hytale для створення екземпляра",
       "notPlayed": "Не грали",
